// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Watch A11y I can see the skip to content link 1`] = `"ਸਮੱਗਰੀ 'ਤੇ ਜਾਓ"`;

exports[`Canonical Watch Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Watch Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Watch Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "73",
  },
  {
    "p": "punjabi.watch.cy9dkd8l9lrdo.page",
  },
  {
    "x1": "[urn:bbc:optimo:asset:cy9dkd8l9lrdo]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-punjabi]",
  },
  {
    "x4": "[pa]",
  },
  {
    "x7": "[article-sfv]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[BBC%20świadkiem%20ataku%20izraelskich%20osadników%20na%20grupę%20Palestyńczyków%20na%20Zachodnim%20Brzegu.]",
  },
  {
    "x11": "[2026-10-01T12:40:27.377Z]",
  },
  {
    "x12": "[2026-10-01T12:40:27.377Z]",
  },
]
`;

exports[`Canonical Watch Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, ਪੰਜਾਬੀ",
  "url": "/punjabi",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 2`] = `
{
  "text": "ਤੁਸੀਂ ਬੀਬੀਸੀ 'ਤੇ ਕਿਉਂ ਵਿਸ਼ਵਾਸ਼ ਕਰ ਸਕਦੇ ਹੋ",
  "url": "https://www.bbc.com/punjabi/institutional-49282853",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 3`] = `
{
  "text": "ਵਰਤੋ ਦੀਆਂ ਸ਼ਰਤਾਂ",
  "url": "https://www.bbc.com/terms",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 4`] = `
{
  "text": "BBC ਬਾਰੇ",
  "url": "https://www.bbc.co.uk/aboutthebbc",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 5`] = `
{
  "text": "ਨਿੱਜਤਾ ਪਾਲਿਸੀ",
  "url": "https://www.bbc.com/punjabi/articles/cn0w4y8n1weo",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 6`] = `
{
  "text": "ਕੁਕੀਜ਼",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 7`] = `
{
  "text": "ਬੀਬੀਸੀ ਨਾਲ ਸੰਪਰਕ ਕਰੋ",
  "url": "https://www.bbc.co.uk/punjabi/send/u50853621",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 8`] = `
{
  "text": "ਬੀਬੀਸੀ ’ਤੇ ਹੋਰ ਭਾਸ਼ਾਵਾਂ ਵਿੱਚ ਖ਼ਬਰਾਂ",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Watch Footer Anchors should match text and url 9`] = `
{
  "text": "ਬਾਹਰੀ ਲਿੰਕਿੰਗ ਲਈ ਸਾਡੇ ਤਰੀਕੇ ਬਾਰੇ ਪੜ੍ਹੋ",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Watch Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/punjabi"`;

exports[`Canonical Watch Footer Paragraphs should match text 1`] = `"ਬੀਬੀਸੀ ਲਈ ਕਲੈਕਟਿਵ ਨਿਊਜ਼ਰੂਮ ਪ੍ਰਕਾਸ਼ਨ"`;

exports[`Canonical Watch Footer Paragraphs should match text 2`] = `"© 2026 BBC. ਬਾਹਰੀ ਸਾਈਟਾਂ ਦੀ ਸਮਗਰੀ ਲਈ ਬੀਬੀਸੀ ਜ਼ਿੰਮੇਵਾਰ ਨਹੀਂ ਹੈ ਬਾਹਰੀ ਲਿੰਕਿੰਗ ਲਈ ਸਾਡੇ ਤਰੀਕੇ ਬਾਰੇ ਪੜ੍ਹੋ"`;

exports[`Canonical Watch Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, ਪੰਜਾਬੀ",
  "svg": <path
    d="M759.927 265.75a4646.67 4646.67 0 00-23.49-37.242 2633.129 2633.129 0 00-23.49-36.2v73.442h-22.003V159.452h23.193a2668.556 2668.556 0 0123.713 36.052 2774.159 2774.159 0 0123.266 36.647v-72.699h22.003V265.75h-23.192zM804.186 159.452h73.145v19.03h-50.25v23.044h44.6v19.029h-44.6v26.166h53.075v19.03h-75.97V159.451zM982.1 265.75a3174.441 3174.441 0 01-9.886-35.978 3159.855 3159.855 0 01-9.441-35.977 2391.54 2391.54 0 01-9.218 35.977 2452.296 2452.296 0 01-9.811 35.978H919.51a2032.839 2032.839 0 01-14.57-52.628c-4.659-17.74-9.068-35.63-13.23-53.67h24.976a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.77 40.586 3259.894 3259.894 0 0018.882-77.456h22.3a3251.95 3251.95 0 0018.732 75.821 1999.976 1999.976 0 008.623-39.843 1455.41 1455.41 0 007.73-40.438h24.531a1845.28 1845.28 0 01-13.231 53.67 2041.61 2041.61 0 01-14.57 52.628H982.1zM1077.47 267.98c-5.849 0-11.621-.645-17.32-1.932a66.227 66.227 0 01-16.427-6.096v-20.516c10.604 6.444 21.854 9.663 33.747 9.663 6.74 0 11.868-1.138 15.388-3.419 3.517-2.28 5.277-5.45 5.277-9.515 0-3.07-.868-5.475-2.601-7.21-1.736-1.733-4.04-3.122-6.914-4.163-2.875-1.04-6.095-2.007-9.663-2.899-5.849-1.387-11.002-2.974-15.462-4.757-4.46-1.784-8.228-3.889-11.298-6.319-3.073-2.427-5.403-5.352-6.988-8.771-1.586-3.42-2.379-7.508-2.379-12.265 0-6.74 1.71-12.537 5.13-17.395 3.419-4.855 8.25-8.597 14.495-11.225 6.244-2.624 13.677-3.939 22.3-3.939 5.65 0 11.2.646 16.651 1.933 5.45 1.289 10.356 3.024 14.718 5.203v20.22c-4.362-2.677-9.292-4.758-14.792-6.245s-11.027-2.23-16.577-2.23c-6.046 0-10.73 1.04-14.049 3.122-3.322 2.081-4.98 5.055-4.98 8.92 0 2.776.792 4.98 2.378 6.616 1.584 1.635 3.84 2.973 6.765 4.014 2.922 1.04 6.367 2.058 10.332 3.047 5.055 1.29 9.761 2.702 14.124 4.238 4.36 1.537 8.2 3.493 11.521 5.872 3.32 2.379 5.896 5.403 7.731 9.069 1.833 3.668 2.75 8.177 2.75 13.529 0 7.038-1.735 13.06-5.203 18.063-3.47 5.006-8.474 8.823-15.015 11.447-6.542 2.626-14.421 3.94-23.639 3.94z"
  />,
}
`;

exports[`Canonical Watch Header Navigation link should match text and url 1`] = `
{
  "text": "ਖ਼ਬਰਾਂ",
  "url": "/punjabi",
}
`;

exports[`Canonical Watch Image Caption should match text 1`] = `"ਵੀਡੀਓ ਕੈਪਸ਼ਨ, BBC świadkiem ataku izraelskich osadników na palestyńską farmę na Zachodnim Brzegu"`;

exports[`Canonical Watch Image should match snapshot 1`] = `
<noscript>
  <div>
    <div
      class="css-v9ynfy"
    >
      <strong
        class="css-1mo6435"
      >
        ਮੀਡੀਆ ਪਲੇਬੈਕ ਤੁਹਾਡੀ ਡਿਵਾਈਸ 'ਤੇ ਸਪੋਰਟ ਨਹੀਂ ਕਰਦਾ
      </strong>
    </div>
  </div>
</noscript>
`;

exports[`Canonical Watch Main heading should match text 1`] = `"BBC świadkiem ataku izraelskich osadników na palestyńską farmę na Zachodnim Brzegu"`;

exports[`Canonical Watch Media Loader renders a valid container 1`] = `
<figure
  class="media-container css-1ocpd8x"
  data-e2e="media-loader__container"
>
  <div
    class="css-zmtwe4"
    data-simorgh-media-loader="inactive"
  >
    <div
      class="media-player css-mw2k38"
      data-e2e="media-player"
    >
      <noscript>
        <div>
          <div
            class="css-v9ynfy"
          >
            <strong
              class="css-1mo6435"
            >
              ਮੀਡੀਆ ਪਲੇਬੈਕ ਤੁਹਾਡੀ ਡਿਵਾਈਸ 'ਤੇ ਸਪੋਰਟ ਨਹੀਂ ਕਰਦਾ
            </strong>
          </div>
        </div>
      </noscript>
    </div>
  </div>
  <figcaption
    class="css-1d4mkdr"
    dir="ltr"
  >
    <span
      role="text"
    >
      <span
        class="css-ju1gaf"
      >
        ਵੀਡੀਓ ਕੈਪਸ਼ਨ, 
      </span>
      <span
        data-testid="caption-paragraph"
      >
        BBC świadkiem ataku izraelskich osadników na palestyńską farmę na Zachodnim Brzegu
      </span>
    </span>
  </figcaption>
</figure>
`;

exports[`Canonical Watch SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/punjabi/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Watch SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/punjabi/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Watch SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/punjabi/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Watch SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/punjabi/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Watch SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/punjabi/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Watch SEO Canonical link 1`] = `"http://localhost:7081/punjabi/watch/cy9dkd8l9lrdo"`;

exports[`Canonical Watch SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Watch SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Watch SEO Heading level 1 1`] = `"BBC świadkiem ataku izraelskich osadników na palestyńską farmę na Zachodnim Brzegu"`;

exports[`Canonical Watch SEO Lang attribute 1`] = `"pa"`;

exports[`Canonical Watch SEO Linked data should match text 1`] = `
{
  "@context": "https://schema.org",
  "@graph": [
    {
      "@type": "NewsArticle",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/punjabi/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News ਪੰਜਾਬੀ",
        "noBylinesPolicy": "https://www.bbc.com/punjabi/institutional-49282853#authorexpertise",
      },
      "dateModified": "2026-10-01T12:40:27.377Z",
      "datePublished": "2026-10-01T12:40:27.377Z",
      "headline": "BBC świadkiem ataku izraelskich osadników na grupę Palestyńczyków na Zachodnim Brzegu.",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_punjabi/p01wppbn.jpg",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "pa",
        "name": "Punjabi",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/punjabi/watch/cy9dkd8l9lrdo",
        "@type": "WebPage",
        "name": "BBC świadkiem ataku izraelskich osadników na grupę Palestyńczyków na Zachodnim Brzegu.",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/punjabi/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News ਪੰਜਾਬੀ",
        "publishingPrinciples": "https://www.bbc.com/punjabi/institutional-49282853",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_punjabi/p01wppbn.jpg",
      "url": "http://localhost:7081/punjabi/watch/cy9dkd8l9lrdo",
    },
  ],
}
`;

exports[`Canonical Watch SEO Linked data should match text 2`] = `
{
  "@context": "http://schema.org",
  "@type": "VideoObject",
  "description": "BBC świadkiem ataku izraelskich osadników na grupę Palestyńczyków na Zachodnim Brzegu.",
  "duration": "PT2M10S",
  "embedURL": "https://www.test.bbc.com/ws/av-embeds/articles/cy9dkd8l9lrdo/p01wppb0/pa",
  "name": "BBC świadkiem ataku izraelskich osadników na palestyńską farmę na Zachodnim Brzegu",
  "thumbnailUrl": "https://ichef.test.bbci.co.uk/images/ic/1024x576/p01wppbn.jpg",
  "uploadDate": "2025-08-19T09:53:12.000Z",
}
`;

exports[`Canonical Watch SEO OG description 1`] = `"BBC świadkiem ataku izraelskich osadników na grupę Palestyńczyków na Zachodnim Brzegu."`;

exports[`Canonical Watch SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1200/branded_punjabi/p01wppbn.jpg"`;

exports[`Canonical Watch SEO OG image alt 1`] = `"Korespondentka BBC Lucy Williamson na palestyńskiej farmie na Zachodnim Brzegu, gdzie doszło do ataku."`;

exports[`Canonical Watch SEO OG locale 1`] = `"pa-IN"`;

exports[`Canonical Watch SEO OG site name 1`] = `"BBC News ਪੰਜਾਬੀ"`;

exports[`Canonical Watch SEO OG title 1`] = `"BBC świadkiem ataku izraelskich osadników na grupę Palestyńczyków na Zachodnim Brzegu. - BBC News ਪੰਜਾਬੀ"`;

exports[`Canonical Watch SEO OG type 1`] = `"article"`;

exports[`Canonical Watch SEO OG url 1`] = `"http://localhost:7081/punjabi/watch/cy9dkd8l9lrdo"`;

exports[`Canonical Watch SEO Page title 1`] = `"BBC świadkiem ataku izraelskich osadników na grupę Palestyńczyków na Zachodnim Brzegu. - BBC News ਪੰਜਾਬੀ"`;

exports[`Canonical Watch SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Watch SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Watch SEO Twitter creator 1`] = `"@bbcnewspunjabi"`;

exports[`Canonical Watch SEO Twitter description 1`] = `"BBC świadkiem ataku izraelskich osadników na grupę Palestyńczyków na Zachodnim Brzegu."`;

exports[`Canonical Watch SEO Twitter image alt 1`] = `"Korespondentka BBC Lucy Williamson na palestyńskiej farmie na Zachodnim Brzegu, gdzie doszło do ataku."`;

exports[`Canonical Watch SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1200/branded_punjabi/p01wppbn.jpg"`;

exports[`Canonical Watch SEO Twitter site 1`] = `"@bbcnewspunjabi"`;

exports[`Canonical Watch SEO Twitter title 1`] = `"BBC świadkiem ataku izraelskich osadników na grupę Palestyńczyków na Zachodnim Brzegu. - BBC News ਪੰਜਾਬੀ"`;

exports[`Canonical Watch Timestamp should match text and date 1`] = `
{
  "date": "2026-10-01",
  "text": "1 ਅਕਤੂਬਰ 2026",
}
`;
